Term-in-doc page accuracy. Invisible class fixed.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@ td, th {
 }
 
 .invisible {
-    visibility: hidden;
+    display: none;
     height: 0;
 }
 .invisible2 {
